--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ html {
     box-sizing: inherit;
     margin: 0;
     padding: 0;
+  
   }
   
   body {
@@ -13,6 +14,7 @@ html {
    -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans,
     Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
    line-height: 1.4;
+   background-color: rgb(100, 98, 98);
   }
   
   .container {
@@ -111,6 +113,15 @@ html {
   input[type="text"] {
     width: 100%;
     padding: 10px;
-    border-radius: 4px;
-    border: 3px solid #333;
+    border-radius: 8px;
+    outline: none;
+    background: grey;
+    border: 1px solid black;
+  }
+  input::placeholder{
+    color: rgb(231, 231, 231);
+  }
+
+  h1{
+    color: black;
   }
