--- a/css/style.css
+++ b/css/style.css
@@ -1,127 +1,118 @@
-html {
-    box-sizing: border-box;
-  }
-  
-  *, *::before, *::after {
-    box-sizing: inherit;
-    margin: 0;
-    padding: 0;
-  
-  }
-  
-  body {
-   font-family:
-   -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans,
-    Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-   line-height: 1.4;
-   background-color: rgb(100, 98, 98);
-  }
-  
-  .container {
-    width: 100%;
-    max-width: 500px;
-    margin: 0 auto;
-    padding-left: 10px;
-    padding-right: 10px;
-    color: #333;
-    height: 90vh;
-    margin-top: 5vh;
-    margin-bottom: 5vh;
-    overflow-y: auto;
-  }
-  
-  .app-title {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 80px;
-    opacity: 0.5;
-  }
-  
-  svg {
-    width: 64px;
-    height: 64px;
-  }
-  
-  .todo-list {
-    list-style: none;
-    margin-bottom: 20px;
-  }
-  
-  .todo-item {
-    margin-bottom: 10px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .todo-item span {
-    flex-grow: 1;
-    margin-left: 10px;
-    margin-right: 10px;
-    font-size: 22px;
-  }
-  
-  .done span {
-    text-decoration: line-through;
-  }
-  
-  input[type="checkbox"] {
-    display: none;
-  }
-  
-  .tick {
-    width: 30px;
-    height: 30px;
-    border: 3px solid #333;
-    border-radius: 50%;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-  }
-  
-  .tick::before {
-    content: '✓';
-    font-size: 20px;
-    display: none;
-  }
-  
-  .done .tick::before {
-    display: inline;
-  }
-  
-  .delete-todo {
-    border: none;
-    background-color: transparent;
-    outline: none;
-    cursor: pointer;
-  }
-  
-  .delete-todo svg {
-    width: 30px;
-    height: 30px;
-    pointer-events: none;
-  }
-  
-  form {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  input[type="text"] {
-    width: 100%;
-    padding: 10px;
-    border-radius: 8px;
-    outline: none;
-    background: grey;
-    border: 1px solid black;
-  }
-  input::placeholder{
-    color: rgb(231, 231, 231);
-  }
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Roboto;
+}
+body {
+  line-height: 1.4;
+  background-color: rgb(103, 66, 128);
+  margin: 10vh 3vh 0vh;
+}  
+.container {
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  height: 78vh;
+  margin-top: 0vh;
+  margin-bottom: 0vh;
+  overflow-y: auto;
+  background-color: rgb(236, 236, 236);
+  border-radius: 20px;
+}
+.app-title {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 40px;
+}
+.app-subtitle {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+svg {
+  width: 64px;
+  height: 64px;
+}
+.todo-list {
+  list-style: none;
+  margin-bottom: 20px;
+}
+.todo-item {
+  margin-bottom: 10px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.todo-item span {
+  flex-grow: 1;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 22px;
+}
+.done span {
+  text-decoration: line-through;
+}
+input[type="checkbox"] {
+  display: none;
+}
+.tick {
+  width: 30px;
+  height: 30px; 
+  background-color:transparent;
+  border: 1px solid green;
+  border-radius: 50%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.tick::before {
+  content: '✓';
+  font-size: 22px;
+  color: green;
+  display: none;
+}
+.done .tick::before {
+  display: inline;
+}
+.delete-todo {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+}
+.delete-todo svg {
+  width: 30px;
+  height: 30px;
+  pointer-events: none;
+}
+form {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+input[type="text"] {
+  width: 90%;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 20px;
+  margin: 0px 0px 20px;
+  outline: none;
+  background: rgb(255, 255, 255);
+  border: none;
+}
+input::placeholder{
+  color: rgb(231, 231, 231);
+}
 
-  h1{
-    color: black;
-  }
+h1{
+  color: rgb(0, 0, 0);
+}
